--- a/src/main/resources/templates/greeting.mustache
+++ b/src/main/resources/templates/greeting.mustache
@@ -1,11 +1,11 @@
-<!DOCTYPE HTML>
+
 <html>
 <head>
-    <title>Getting Started: Serving Web Content</title>
-    <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
+    <title>Voter</title>
+
 </head>
 <body>
-<div>Hello,{{name}}</div>
-
+<div>Hello,user!!!</div>
+<a href="/main">Main Page</a>
 </body>
 </html>
