--- a/src/main/resources/templates/main.mustache
+++ b/src/main/resources/templates/main.mustache
@@ -8,7 +8,7 @@
 </div>
 <div>Введите данные</div>
 <div>
-    <form  method = "post">
+    <form  method = "post" action = "add">
         <input type="text" name="text" placeholder="Введите сообщение"/>
         <input type="text" name="tag" placeholder="Добавьте тэг"/>
         <input type="hidden" name="_csrf" value="{{_csrf.token}}"/>
